Revert "Support for remainder of unit tests"
This reverts commit 3184fa6f9b80b2e5f21b14aa23c61d3f25eaac86.

--- a/cFE-6.5.0-OSS-release/osal/src/unit-tests/Makefile
+++ b/cFE-6.5.0-OSS-release/osal/src/unit-tests/Makefile
@@ -1,15 +1,13 @@
-# TODO: Support for printf testing - minimal tests are performed in oscore, but osprintf is much more thorough
+# TODO: Source some file to get compiler version, etc.
+# TODO: Use timer
 
 CC = gcc
 C_VERSION = c99
 
-TESTS = oscore-test osfile-test osnetwork-test ostimer-test osfilesys-test osloader-test
+SOURCE_FILES := $(wildcard oscore-test/*.c) $(wildcard shared/*.c)
+SOURCE_FILES := $(filter-out oscore-test/ut_oscore_test_arinc653.c oscore-test/ut_oscore_test_vxworks.c, $(SOURCE_FILES))
 
-IGNORE = oscore-test/ut_oscore_test_arinc653.c oscore-test/ut_oscore_test_vxworks.c osfile-test/ut_osfile_test_arinc653.c osfilesys-test/ut_osfilesys_test_arinc653.c osfilesys-test/ut_osfilesys_test_vxworks.c ostimer-test/ut_ostimer_test_arinc653.c osloader-test/ut_osloader_test_arinc653.c osnetwork-test/ut_osnetwork_test_arinc653.c shared/ut_psp_voltab_stubs_arinc653.c shared/ut_psp_voltab_stubs_vxworks.c
-SOURCE_FILES := $(foreach test, $(TESTS), $(wildcard $(test)/*.c)) $(wildcard shared/*.c)
-SOURCE_FILES := $(filter-out $(IGNORE), $(SOURCE_FILES))
-
-CFLAGS = -std=$(C_VERSION) -DOS_USE_EMBEDDED_PRINTF -DLOG_TO_STDOUT_TOO -DCOMPOSITE_OS -fno-stack-protector -c -I ../bsp/pc-composite/config -I ./shared -I ../os/inc -I ./osfile-test
+CFLAGS = -std=$(C_VERSION) -DOS_USE_EMBEDDED_PRINTF -DLOG_TO_STDOUT_TOO -DCOMPOSITE_OS -fno-stack-protector -c -I ../bsp/pc-composite/config -I ./shared -I ../os/inc
 
 all:
 	$(CC) $(CFLAGS) $(SOURCE_FILES)
